@@ -1,5 +1,7 @@
 1.6.6.dev0
  * #559: Update documentation about configuring multiple consistency checks or multiple databases.
+ * #560: Fix all database hooks to error when the requested database to restore isn't present in the
+   Borg archive.
  * #561: Fix command-line "--override" flag to continue supporting old configuration file formats.
 
 1.6.5
